--- a/agents/helm_agent/Dockerfile
+++ b/agents/helm_agent/Dockerfile
@@ -1,12 +1,22 @@
 FROM python:3.11-slim
 
 WORKDIR /app
+
+# Install system dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
-COPY app.py .
-RUN pip install --no-cache-dir flask requests
+# Copy requirements first to leverage Docker cache
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Copy application files
+COPY . .
 
 EXPOSE 9002
+
+# Set the Python path to include the project root
+ENV PYTHONPATH=/app
+
 CMD ["python", "app.py"]
