--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
       - DEPLOY_AGENT_URL=http://deploy_agent:9003
       - SECRET_KEY=${SECRET_KEY}
       - DEBUG=False
+      - DATABASE_URL=${ENV_DATABASE_URL}
+      - POSTGRES_SSL=${ENV_POSTGRES_SSL}
     volumes:
       - .:/app
     healthcheck:
@@ -30,13 +32,20 @@ services:
     restart: unless-stopped
     networks:
       - monitoring_network
+    depends_on:
+      postgres:
+        condition: service_healthy
 
   ci_agent:
     build: ./agents/ci_agent
     ports:
       - "9001:9001"
     volumes:
-      - ./agents/ci_agent:/app
+      - .:/app
+    environment:
+      - PYTHONPATH=/app
+      - DATABASE_URL=${ENV_DATABASE_URL}
+      - POSTGRES_SSL=${ENV_POSTGRES_SSL}
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:9001/health"]
       interval: 30s
@@ -45,36 +54,55 @@ services:
     restart: unless-stopped
     networks:
       - monitoring_network
+    depends_on:
+      postgres:
+        condition: service_healthy
 
   helm_agent:
     build: ./agents/helm_agent
     ports:
       - "9002:9002"
     volumes:
-      - ./agents/helm_agent:/app
+      - .:/app
+    environment:
+      - PYTHONPATH=/app
+      - DATABASE_URL=${ENV_DATABASE_URL}
+      - POSTGRES_SSL=${ENV_POSTGRES_SSL}
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9002/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:9001/health"]
       interval: 30s
       timeout: 10s
       retries: 3
     restart: unless-stopped
     networks:
       - monitoring_network
+    depends_on:
+      postgres:
+        condition: service_healthy
+
 
   deploy_agent:
     build: ./agents/deploy_agent
     ports:
       - "9003:9003"
     volumes:
-      - ./agents/deploy_agent:/app
+      - .:/app
+    environment:
+      - PYTHONPATH=/app
+      - DATABASE_URL=${ENV_DATABASE_URL}
+      - POSTGRES_SSL=${ENV_POSTGRES_SSL}
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9003/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:9001/health"]
       interval: 30s
       timeout: 10s
       retries: 3
     restart: unless-stopped
     networks:
       - monitoring_network
+    depends_on:
+      postgres:
+        condition: service_healthy
+
 
   prometheus:
     image: prom/prometheus
@@ -111,9 +139,29 @@ services:
     networks:
       - monitoring_network
 
+  postgres:
+    image: postgres:15
+    ports:
+      - "5432:5432"
+    environment:
+      - POSTGRES_USER=alfred
+      - POSTGRES_PASSWORD=alfred_pass
+      - POSTGRES_DB=alfred_db
+    volumes:
+      - postgres_data:/var/lib/postgres/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U alfred"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    restart: unless-stopped
+    networks:
+      - monitoring_network
+
 networks:
   monitoring_network:
     driver: bridge
 
 volumes:
   grafana_data:
+  postgres_data:
